Sun Feb 29 13:40:00 2004  YAMAZAKI Makoto <zaki@zakky.org>

	* OmoiKondara: fix for subversion

Thu Jan 15 22:39:00 2004  YAMAZAKI Makoto <zaki@zakky.org>

	* add '\' in rpmmacros for debug

Fri Jan  9 00:36:00 2004  YAMAZAKI Makoto <zaki@zakky.org>

	* OmoiKondara: add option to let OmoiKondara ignore REMOVE* file

Sat Jan  3 18:32:00 2004  YAMAZAKI Makoto <zaki@zakky.org>

	* commit: refactoring
	* commit: commit all specs at once if svn

Sat Jan  3 14:34:06 2004  Kenta MURATA  <muraken2@nifty.com>

	* OmoiKondara: correct SKIP support.

Sat Jan  3 14:21:11 2004  Kenta MURATA  <muraken2@nifty.com>

	* OmoiKondara: support SKIP file.

Fri Jan  2 16:01:05 2004  Kenta MURATA  <muraken2@nifty.com>

	* lib/builtin-macros: new file describes rpm builtin macros.
	* lib/macro-syntax.bnf: new file describes rpm macro syntax by
	BNF.

Wed Dec 24 18:32:00 2003  YAMAZAKI Makoto <zaki@zakky.org>

	* commit: add svn support

Fri Dec 19 06:54:39 2003  Kenta MURATA  <muraken2@nifty.com>

	* lib/timeout.rb: stop default value for timeout.
	append read-only accessor for timeout.
	* lib/process.rb: ditto.
	* test/tc_timeout.rb: ditto.

Fri Dec 19 06:52:03 2003  Kenta MURATA  <muraken2@nifty.com>

	* lib/arrayof.rb: modify documentation.

	* lib/timeoutio.rb: separate from OmoiKondara3.rb, and rename
	TimeoutedIO to TimeoutIO.
	Supports writing methods.

	* lib/process.rb: separate from OmoiKondara3.rb, and rename
	TimeoutedProcess to TimeoutProcess.

	* OmoiKondara3.rb: TimeoutedIO separate to lib/timeoutio.rb.
	ChildProcess, PipedProcess and TimeoutedProcess separete to
	lib/process.rb.

	* test/tc_timeoutio.rb: separate from tc_OmoiKondara.rb.

	* test/tc_process.rb: separate from tc_OmoiKondara.rb.

	* tc_OmoiKondara.rb: test case of TimeoutedIO separate to
	test/tc_timeoutio.rb.  test case of ChildProcess, PipedProcess,
	TimeoutedProcess separate to test/tc_process.rb.

Fri Dec 19 03:48:34 2003  Kenta MURATA  <muraken2@nifty.com>
